solc_mutator_ossfuzz_seed_corpus/test_sol/test_dec1f440d97b7d93daacd89ce9b8596b03f097017217a1d10c528cb69a533c9f_42563afbb15b992cf754a3de7b8a0dbb0a16d31d_sol.sol
==== Source:  ====

==== Source: su0.sol ====
bytes32 constant cons0 = ((bytes32(bytes25(0xbeca24e1272f6c343bc42b337b07963893514997a53bf45aee)) ^ bytes32(0x0000000000000000000000000000000000000000000000000000000000000000)) | bytes32(0x641b0cabf5c7628a5acd0c68b59ea2042a28b3a546ce85429a438ffc25f9f263));
pragma solidity >= 0.0.0;
struct St0 {
  uint200 el0;
  function (function (bytes11, address, function (int160, address payable) internal  ) internal   returns (address)) external   el1;
  mapping(bool => uint216) el2;
  bool el3;
}
function f0(address payable i0,function (address) external   returns (uint200) i1)     returns(bytes5 o0)
{
}
// ----
// TypeError 2582: (su0.sol:323-427): Internal type cannot be used for external function type.
